--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,18 @@ spring.application.name=KTO_public_api_4
 
 #server.port=8080
 
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://svc.sel5.cloudtype.app:30814/tour
-spring.datasource.username=root
-spring.datasource.password=root
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/tourTest
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://svc.sel5.cloudtype.app:30814/tour
 #spring.datasource.username=root
-#spring.datasource.password=@@baramdmf123
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.password=root
+
+spring.datasource.url=jdbc:mysql://localhost:3306/tourTest
+spring.datasource.username=root
+spring.datasource.password=@@baramdmf123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
