--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.application.name=KTO_public_api_4
 
 #server.port=8080
 
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://svc.sel4.cloudtype.app:31422/tour
-spring.datasource.username=root
-spring.datasource.password=root
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/tourTest
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://svc.sel4.cloudtype.app:31422/tour
 #spring.datasource.username=root
-#spring.datasource.password=@@baramdmf123
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.password=root
+
+spring.datasource.url=jdbc:mysql://localhost:3306/tourTest
+spring.datasource.username=root
+spring.datasource.password=@@baramdmf123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
